--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -4,8 +4,8 @@
    Tutorial Case
    
    TSS Typographic Style Sheet
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   10/27/2024
    
    Filename: tss_styles.css
 
