--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -15,6 +15,13 @@
 
 
 /* HTML and Body Styles */
+html {
+   background-color: hsl(27, 72%, 72%);
+}
+body {
+   color: rgb(91, 91, 91);
+   background-color: ivory;
+}
 
 
 
