--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -28,7 +28,14 @@ body {
 
 
 /* Heading Styles */
-
+h1{
+   color: white;
+   background-color: rgb(222, 128, 60);
+}
+h2 {
+   color: white;
+   background-color: rgb(235, 177, 131);
+}
 
 
 
