--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -36,7 +36,10 @@ article#about_tss h2 {
    color: white;
    background-color: rgb(235, 177, 131);
 }
-
+article.syllabus h1, article.syllabus h2 {
+   background-color: rgb(255, 185, 255);
+   color: rgb(101, 101, 101);
+}
 
 
 
