--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -34,6 +34,9 @@ body {
 
 
 /* Heading Styles */
+h1, h2 {
+   font-family: Quicksand, Verdana, Geneva, sans-serif;
+}
 article#about_tss h1{
    color: white;
    background-color: rgb(222, 128, 60);
