--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -34,6 +34,13 @@ body {
 
 
 /* Heading Styles */
+h1{
+   font-size:2.2em;
+}
+h2 {
+   font-size: 1.5em;
+}
+
 h1, h2 {
    font-family: Quicksand, Verdana, Geneva, sans-serif;
 }
