--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -61,6 +61,10 @@ article.syllabus h1, article.syllabus h2 {
 
 
 /* Aside and Blockquote Styles */
+aside {
+   font-size: 0.8em;
+}
+
 aside blockquote {
    color: rgb(232, 165, 116);
 }
