--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -92,12 +92,14 @@ nav {
 
 
 /* Footer Styles */
-body> footer address {
-   background-color: rgb (222, 128, 60);
-   color: white; color: rgba(255, 255, 255, 0.7);
+
+body > footer adress {
+   background-color: rgb(222,128,60);
+   color: white;
+   color: rgba(255, 255, 255, 0.7);
    font: normal small-caps bold 0.9em/3em
          Quicksand, Verdana, Geneva, sans-serif;
-   text-align: center;
+         text-align: center;
 }
 
 
