--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -86,7 +86,17 @@ nav {
 
 
 /* List Styles */
+article.syllabus ol {
+   list-style-type: upper-roman;
+}
 
+article.syllabus ol ol {
+   list-style-type: upper-alpha;
+}
+
+article.syllabus ol ol ol {
+   list-style-type: decimal;
+}
 
 
 
