--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -74,8 +74,10 @@ aside blockquote {
 
 
 /* Navigation Styles */	
+
 nav> ul {
    line-height:2em;
+   list-style-type: none;
 }
 
 nav {
@@ -86,6 +88,7 @@ nav {
 
 
 /* List Styles */
+
 article.syllabus ol {
    list-style-type: upper-roman;
 }
