--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -88,7 +88,9 @@ nav {
 
 
 /* List Styles */
-
+article#about_tss ul {
+   list-style-image: url(runicon.png);
+}
 article.syllabus ol {
    list-style-type: upper-roman;
 }
