--- a/assn05/tutorial/tss_styles.css
+++ b/assn05/tutorial/tss_styles.css
@@ -80,6 +80,9 @@ nav> ul {
    list-style-type: none;
    padding-left: 5px;
 }
+nav > ul > li.newgroup {
+   margin-top: 20px;
+}
 
 nav {
    font-size: 0.8em;
