--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -1,4 +1,23 @@
 @charset "UTF-8";
+
+@font-face {
+   font-family: "Champagne";
+   src: url("cac_champagne.woff") format("woff"),
+        url("cac_champagne.ttf") format("truetype");
+}
+
+@font-face {
+   font-family: "Grunge";
+   src: url("1942.woff") format("woff"),
+        url("1942.ttf") format("truetype");
+}
+
+@font-face {
+   font-family: "Dobkin";
+   src: url("DobkinPlain.woff") format("woff"),
+        url("DobkinPlain.ttf") format("truetype");
+}
+
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
