--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -38,6 +38,10 @@ html {
    background-color: hsl(91, 8%, 56%);
 }
 
+body {
+   background-color: hsl(58, 31%, 84%);
+   font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+}
 
 
 /* Navigation Styles */
