--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -43,6 +43,9 @@ body {
    font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 }
 
+header {
+   background-color: black;
+}
 
 /* Navigation Styles */
 
