--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -47,8 +47,9 @@ header {
    background-color: black;
 }
 
-header {
-   background-color: black;
+p {
+   margin: 0;
+   padding: 5px 25px;
 }
 /* Navigation Styles */
 
