--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -51,6 +51,11 @@ p {
    margin: 0;
    padding: 5px 25px;
 }
+
+body > p {
+   font-size: 1.1em;
+   text-align: center;
+}
 /* Navigation Styles */
 
 
