--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -56,6 +56,14 @@ body > p {
    font-size: 1.1em;
    text-align: center;
 }
+
+address {
+   font-style: normal;
+   font-size: 0.9em;
+   text-align: center;
+   padding: 10px 0;
+}
+
 /* Navigation Styles */
 
 
