--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -66,6 +66,10 @@ address {
 
 /* Navigation Styles */
 
+nav a {
+   font-family: 'Trebuchet MS', Helvetica, sans-serif;
+   padding: 10px 0;
+}
 
 
 
