--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -78,6 +78,11 @@ nav a:visited {
     background-color: hsla(0, 0%, 42%, 0.4);
 }
 
+nav a:active,
+nav a:hover {
+    color: hsla(0, 0%, 100%, 0.7);
+    background-color: hsla(0, 0%, 42%, 0.7);
+}
 
 /* Section Styles */
 
