--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -86,6 +86,12 @@ nav a:hover {
 
 /* Section Styles */
 
+section.playbill h1 {
+   font-size: 3em;
+   font-weight: normal;
+   margin: 0;
+   padding: 20px 0 10px 20px;
+}
 
 
 
