--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -93,6 +93,22 @@ section.playbill h1 {
    padding: 20px 0 10px 20px;
 }
 
+#play1 {
+   background-color: hsl(240, 100%, 88%);
+}
+
+#play2 {
+   background-color: hsl(25, 88%, 73%);
+}
+
+#play3 {
+   background-color: hsl(0, 100%, 75%);
+}
+
+#play4 {
+   background-color: hsl(296, 86%, 86%);
+}
+
 
 
 /* Description List Styles */
