--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -109,7 +109,21 @@ section.playbill h1 {
    background-color: hsl(296, 86%, 86%);
 }
 
+#play1 h1 {
+   font-family: Champagne, cursive;
+}
 
+#play2 h1 {
+   font-family: Grunge, 'Times New Roman', Times, serif;
+}
+
+#play3 h1 {
+   font-family: Impact, Charcoal, sans-serif;
+}
+
+#play4 h1 {
+   font-family: Dobkin, cursive;
+}
 
 /* Description List Styles */
 
