--- a/midtermExam/case1/ph_styles.css
+++ b/midtermExam/case1/ph_styles.css
@@ -132,3 +132,9 @@ dt {
    font-weight: bold;
    color: hsla(0, 0%, 0%, 0.4);
 }
+
+dd {
+   font-size: 1.3em;
+   margin-left: 0;
+   margin-bottom: 10px;
+}
