--- a/assn06/tutorial/pc_reset.css
+++ b/assn06/tutorial/pc_reset.css
@@ -15,7 +15,9 @@
 
 /* Structural Styles */
 
-
+article, aside, figcaption, figure, footer, header, main, nav, section {
+   display: block;
+}
 
 
 /* Typographic Styles */
