--- a/assn06/tutorial/pc_reset.css
+++ b/assn06/tutorial/pc_reset.css
@@ -22,3 +22,14 @@ article, aside, figcaption, figure, footer, header, main, nav, section {
 
 /* Typographic Styles */
 
+address, article, aside, blockquote, body, cite, 
+div, dl, dt, dd, em, figcaption, figure, footer, 
+h1, h2, h3, h4, h5, h6, header, html, img,
+li, main, nav, ol, p, section, span, ul {
+
+   background: transparent;
+   font-size: 100%;
+   margin: 0;
+   padding: 0;
+   vertical-align: baseline;
+}
