--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Style Sheet for the Layout of the Pandaisia Chocolates Home Page
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/02/2024
    
    Filename: pc_home.css
 
