--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -16,9 +16,12 @@
 /* Body Styles */
 
 body {
+   margin-left: auto;
+   margin-right: auto;
    max-width: 960px;
    min-width: 640px;
    width: 95%;
+   
 }
 
 /* Body Header Styles */
