--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -31,6 +31,10 @@ body > header > img {
    width: 100%;
 }
 
+body > header > nav.horizontalNavigation li {
+   width: 20%;
+}
+
 
 /* Horizontal Navigation Styles */
 
