--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -38,8 +38,20 @@ body > header > nav.horizontalNavigation li {
 
 /* Horizontal Navigation Styles */
 
+nav.horizontalNavigation li {
+   display: block;
+   float: left;
+}
 
+nav.horizontalNavigation a {
+   display: block;
+   float: left;
+}
 
+nav.horizontalNavigation a {
+   display: block;
+   text-align: center;
+}
 /* Left Column Styles */
 
 
