--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -54,7 +54,11 @@ nav.horizontalNavigation a {
 }
 /* Left Column Styles */
 
-
+section#leftColumn {
+   clear: left;
+   float: left;
+   width: 33%;
+}
 
 
 /* Right Column Styles */
