--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -68,6 +68,11 @@ section#rightColumn {
    width: 67%;
 }
 
+section#rightColumn img {
+   display: block;
+   width: 25%;
+}
+
 
 
 /* Footer Styles */
