--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -71,6 +71,10 @@ section#rightColumn {
 
 section#rightColumn img {
    display: block;
+   width: 100%;
+}
+
+section#rightColumn > nav.horizontalNavigation li {
    width: 25%;
 }
 
