--- a/assn06/tutorial/pc_reset.css
+++ b/assn06/tutorial/pc_reset.css
@@ -32,6 +32,7 @@ li, main, nav, ol, p, section, span, ul {
    margin: 0;
    padding: 0;
    vertical-align: baseline;
+   box-sizing: border-box;
 }
 nav ul {
    list-style: none;
