--- a/assn06/tutorial/pc_home.css
+++ b/assn06/tutorial/pc_home.css
@@ -83,6 +83,7 @@ section#rightColumn > nav.horizontalNavigation li {
 /* Footer Styles */
 
 footer {
+   background-color: rgb(71, 52, 29);
    clear: left;
 }
 
