--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -20,6 +20,10 @@ body {
    grid-template-columns: 2fr 1fr;
 }
 
+body > * {
+   outline: 2px dashed red;
+}
+
 /* Grid Columns Styles */
 
 section {
