--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -24,6 +24,10 @@ body > * {
    outline: 2px dashed red;
 }
 
+body > * {
+   outline: 2px dashed blue;
+}
+
 /* Grid Columns Styles */
 
 section {
