--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -20,12 +20,9 @@ body {
    grid-template-columns: 2fr 1fr;
 }
 
-body > * {
-   outline: 2px dashed red;
-}
-
-body > * {
-   outline: 2px dashed blue;
+body > header {
+   grid-row: 1;
+   grid-column: 1/-1;
 }
 
 /* Grid Columns Styles */
@@ -35,6 +32,13 @@ section {
    grid-template-columns: repeat(2, 1fr);
 }
 
+body > * {
+   outline: 2px dashed red;
+}
+
+body > * {
+   outline: 2px dashed blue;
+}
 
 /* Grid Outline Styles */
 
