--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -18,6 +18,7 @@
 body {
    display: grid;
    grid-template-columns: 2fr 1fr;
+   
 }
 
 body > header {
@@ -30,6 +31,10 @@ body > header {
 section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
+   grid-template-areas: "header header"
+                        "intro faq"
+                        "articles faq"
+                        "footer footer";
 }
 
 body > * {
