--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -28,6 +28,7 @@ body > header {
 
 body > article {grid-area: intro;}
 body > aside {grid-area: faq;}
+body > section {grid-area: articles;}
 
 /* Grid Columns Styles */
 
