--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -42,6 +42,10 @@ section {
                         "footer footer";
 }
 
+section > h1 {
+   grid-area: 1/1/2/3;
+}
+
 body > * {
    outline: 2px dashed red;
 }
