--- a/assn06/tutorial/pc_info.css
+++ b/assn06/tutorial/pc_info.css
@@ -4,8 +4,8 @@
    Tutorial Case
    
    Positioning Styles for the pc_info.html file
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/03/2024
    
    Filename: pc_info.css
 
