--- a/assn06/tutorial/pc_info.css
+++ b/assn06/tutorial/pc_info.css
@@ -15,6 +15,11 @@ div.infobox{display:none;}
 div.infobox {
    position: absolute;
 }
+div#info1 {
+   display: block;
+   top: 20px;
+   left: 5%;
+}
 
 /* Main Styles */
 
