--- a/assn06/tutorial/pc_info.css
+++ b/assn06/tutorial/pc_info.css
@@ -47,7 +47,11 @@ div#info2 {
 
 /* Third Infographic */
 
-
+div#info3 {
+   display: block;
+   top: 135px;
+   left: 75%;
+}
 
 /* Fourth Infographic */
 
