--- a/assn06/tutorial/pc_info.css
+++ b/assn06/tutorial/pc_info.css
@@ -63,7 +63,11 @@ div#info4 {
 
 /* Fifth Infographic */
 
-
+div#info5 {
+   display: block;
+   top: 800px;
+   left: 3%;
+}
 
 /* Sixth Infographic */
 
