--- a/assn05/review/coach_styles.css
+++ b/assn05/review/coach_styles.css
@@ -4,8 +4,8 @@
    Review Assignment
    
    TSS Typographic Style Sheet
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/03/2024
    
    Filename: coach_styles.css
 
