--- a/assn05/review/coach_styles.css
+++ b/assn05/review/coach_styles.css
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
 }
 
+h1 {
+   font-size: 2.5em;
+   margin-bottom: 0.5em;
+}
 /* Blockquote Styles */
 
 
