--- a/assn06/tutorial/pc_grids.css
+++ b/assn06/tutorial/pc_grids.css
@@ -35,6 +35,16 @@ body > aside {grid-area: faq;}
 body > section {grid-area: articles;}
 body > footer {grid-area: footer;}
 
+div.row {
+   clear: both;
+}
+ 
+div.row::after {
+   clear: both;
+   content: "";
+   display: table;
+}
+
 /* Grid Columns Styles */
 
 section {
@@ -46,6 +56,18 @@ section {
 section > h1 {
    grid-area: 1/1/2/3;
 }
+
+div[class^="col-"] {
+   float: left;
+}
+ 
+div.col-1-1 {width: 100%;}
+div.col-1-2 {width: 50%;}
+div.col-1-3 {width: 33.33%;}
+div.col-2-3 {width: 66.67%;}
+div.col-1-4 {width: 25%;}
+div.col-3-4 {width: 75%;}
+ 
 
 /* Grid Outline Styles */
 
