--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -27,6 +27,9 @@ body {
    min-height: 100vh; /* Ensures the body is at least as tall as the viewport */
 }
 
+img {
+   display: block;
+}
 /* Row Styles */
 
 
