--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -30,6 +30,11 @@ body {
 img {
    display: block;
 }
+
+body {
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   
 /* Row Styles */
 
 
