--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -55,7 +55,14 @@ body {
 
 /* Horizontal Navigation List Styles */
 
+nav,
+footer {
+    grid-column: span 4; /* Spans across four columns */
+}
 
+aside {
+    grid-column: span 2; /* Spans across two columns */
+}
 
 
 /* Topics Styles */
