--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -64,6 +64,11 @@ aside {
     grid-column: span 2; /* Spans across two columns */
 }
 
+nav li {
+   display: block;
+   width: 12.5%;
+   float: left;
+}
 
 /* Topics Styles */
 
