--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -101,6 +101,11 @@ aside:nth-of-type(odd) {
    justify-self: end;
 }
 
+aside img {
+   float: left;
+   width: 20%;
+   margin-right: 15px;
+}
 /* Footer Styles */
 
 
