--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -106,6 +106,13 @@ aside img {
    width: 20%;
    margin-right: 15px;
 }
+
+aside p {
+   float: left;
+   width: 75%;
+   margin-left: 5%;
+}
+
 /* Footer Styles */
 
 
