--- a/assn07/case1/sp_layout.css
+++ b/assn07/case1/sp_layout.css
@@ -21,98 +21,120 @@ html {
 
 body {
    width: 95%;
-   max-width: 960px;
    min-width: 640px;
-   margin: 0 auto; 
-   min-height: 100vh; 
+   max-width: 960px;
+
+   margin-left: auto;  
+   margin-right: auto;
+
+   min-height: 100%;
+}
+header, ul, nav, li, a {
+   box-sizing: border-box;
 }
 
-img {
-   display: block;
-}
 
-body {
-   display: grid;
-   grid-template-columns: repeat(4, 1fr);
-}
-   
-   #logo {
-      grid-column: span 3;
-      width: 100%;
-   }
 /* Row Styles */
+.row::after {
+   clear: both;
+   content: "";
+   display: table;
+}
 
-
+ 
 
 
 
 /* Page Header Styles */
 
-section img {
-    width: 50%;          
-    margin: 0 auto;      
-    display: block;      
-}
-
-section p {
+body > header > img {
+   display: block;
    width: 70%;
-   margin: 0 auto;
+   float: left;
 }
 
+body > header > nav {
+   float: left;
+   padding-left: 2%;
+   padding-right: 2%;
+   width: 30%;
+}
 
+body > header > nav > ul > li > a {
+   display: block;
+   width: 100%;
+}
 
 /* Horizontal Navigation List Styles */
 
-nav,
-footer {
-    grid-column: span 4; 
-}
-
-aside {
-    grid-column: span 2; 
-}
-
-nav li {
+nav.horizontal > ul > li {
    display: block;
    width: 12.5%;
    float: left;
 }
+ 
 
 /* Topics Styles */
 
+ul#topics > li {
+   display: block;
+   width: 20%;
+   float: left;
+   margin-left: 0%;
+   margin-right: 1.5%;
+}
+ 
+#topics > li:nth-of-type(odd) {
+   margin-left: 2%;
+}
 
+#topics > li:nth-of-type(odd) {
+   margin-right: 2%;
+}
 
-
+ul#topics > li > img {
+   display: block;
+   width: 50%;
+   margin-left: auto;
+   margin-right: auto;
+}
 
 
 /* HR Styles */
 
-
+hr {
+   width: 50%;
+}
+ 
 
 
 /* Customer Comment Styles */
 
-aside {
+ul#comments {
    width: 75%;
-   padding-bottom: 30px;
+   margin: 40px auto;
 }
 
-aside:nth-of-type(odd) {
-   justify-self: end;
-}
-
-aside img {
+ul#comments > li {
+   display: block;
+   width: 50%;
    float: left;
+   margin-bottom: 30px;
+}
+ul#comments > li > img {
+   display: block;
    width: 20%;
-   margin-right: 15px;
-}
-
-aside p {
    float: left;
-   width: 75%;
    margin-left: 5%;
+   margin-right: 5%;
 }
+ 
+ 
+ 
 
 /* Footer Styles */
 
+footer {
+   clear: both;
+}
 
