--- a/assn07/case3/ss_layout.css
+++ b/assn07/case3/ss_layout.css
@@ -42,7 +42,10 @@ article p:first-of-type::first-line {
 
 /* Aside Styles */
 
-
+aside {
+   width: 768px;
+   float: left;
+ }
 
 
 /* Map Styles */
