--- a/assn07/case3/ss_layout.css
+++ b/assn07/case3/ss_layout.css
@@ -50,7 +50,11 @@ aside {
 
 /* Map Styles */
 
-
+#battleMap {
+   width: 688px;
+   margin: 20px auto;
+   position: relative;
+ }
 
 
 /* Interactive Map Styles */
