--- a/assn07/case3/ss_layout.css
+++ b/assn07/case3/ss_layout.css
@@ -86,6 +86,35 @@ a.battleMarkers {
    left: 200px;
  }
 
+ #marker1 {
+   top: 220px;
+   left: 340px;
+ }
+ 
+ #marker2 {
+   top: 194px;
+   left: 358px;
+ }
+ 
+ #marker3 {
+   top: 202px;
+   left: 400px;
+ }
+ 
+ #marker4 {
+   top: 217px;
+   left: 452px;
+ }
+ 
+ #marker5 {
+   top: 229px;
+   left: 498px;
+ }
+ 
+ #marker6 {
+   top: 246px;
+   left: 544px;
+ }
 /* Map Information Styles */
 
 .mapInfo {
