--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Style Sheet for Tree and Book Family Home Page
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/16/2024
    
    Filename: tb_visual1.css
 
