--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -45,7 +45,7 @@ html {
 
 article {
    background: url(tb_back2.png) bottom right / 15%
-               no-repeat content-box;
+               no-repeat content-box,
 }
 
 
