--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -46,6 +46,9 @@ html {
 article {
    background: url(tb_back2.png) bottom right / 15%
                no-repeat content-box,
+               url(tb_back3.png) bottom left / 15% no-repeat content-box
+               url(tb_back4.png) 100%/cover no-repeat,
+               rgb(211, 211, 211);
 }
 
 
