--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -44,9 +44,8 @@ html {
 /* Article Styles */
 
 article {
-   background: url(tb_back2.png) bottom right / 15%
-               no-repeat content-box,
-               url(tb_back3.png) bottom left / 15% no-repeat content-box
+   background: url(tb_back2.png) bottom right / 15% no-repeat content-box,
+               url(tb_back3.png) bottom left / 15% no-repeat content-box,
                url(tb_back4.png) 100%/cover no-repeat,
                rgb(211, 211, 211);
 }
@@ -54,7 +53,10 @@ article {
 
 /* Page Body Styles */
 
-
+body {
+   border-left: 1px solid rgb(51, 51 , 51);
+   border-right: 1px solid rgb(51, 51 , 51);
+}
 
 
 /* Aside Styles */
