--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -77,6 +77,7 @@ body {
 aside {
    border: 4px double rgb(45, 93, 62);
    border-radius: 30px;
+   box-shadow: rgba(51, 91, 51, 0.4) 0px 0px 20px 10px;
 }
 
 /* Footer Styles */
