--- a/assn08/tutorial/tb_visual1.css
+++ b/assn08/tutorial/tb_visual1.css
@@ -82,4 +82,7 @@ aside {
 
 /* Footer Styles */
 
-
+footer {
+   background: linear-gradient(345deg, rgb(172, 232, 172),
+                                       rgb(21, 35, 21) 80%);
+}
