--- a/assn08/tutorial/tb_visual2.css
+++ b/assn08/tutorial/tb_visual2.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Effects Style Sheet for Photo Page at Tree and Book
-   Author:
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/17/2024
    
    Filename: tb_visual2.css
 
