--- a/assn08/tutorial/tb_visual2.css
+++ b/assn08/tutorial/tb_visual2.css
@@ -21,6 +21,11 @@ figure#figure2 {
    box-shadow: rgb(101, 101, 101) 10px 10px 25px;
 }
 
+figure#figure3 {
+   transform: rotate(10deg) scale(0.9, 0.9) translateY(-120px);
+   box-shadow: rgb(101, 101, 101) 10px -10px 25px;
+}
+
 /* Filter Styles */
 
 
