--- a/assn08/tutorial/tb_visual2.css
+++ b/assn08/tutorial/tb_visual2.css
@@ -25,7 +25,8 @@ figure#figure1 {
    box-shadow: rgb(51, 51, 51) 0px 10px 25px;
 }
 figure#figure2 {
-   transform: rotate(-40deg) scale(0.8, 0.8)translate(20px, -100px);
+   transform: rotate(-40deg) scale(0.8, 0.8)translate(20px, -100px)
+   rotateZ(30deg) rotateY(60deg);
    box-shadow: rgb(101, 101, 101) 10px 10px 25px;
 }
 
