--- a/assn08/tutorial/tb_visual2.css
+++ b/assn08/tutorial/tb_visual2.css
@@ -31,7 +31,8 @@ figure#figure2 {
 }
 
 figure#figure3 {
-   transform: rotate(10deg) scale(0.9, 0.9) translateY(-120px);
+   transform: rotate(10deg) scale(0.9, 0.9) translateY(-120px)
+   rotateY(-70deg) translateZ(-20px);
    box-shadow: rgb(101, 101, 101) 10px -10px 25px;
 }
 
