--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -15,7 +15,9 @@
 
 /* Body Header Styles */
 
-
+body {
+   box-shadow: -10px 0 50px rgb(51, 51, 51), 10px 0 50px rgb(51, 51, 51);
+}
 
 /* Navigation Tabs List Styles */
 
