--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -21,7 +21,10 @@ body {
 
 /* Navigation Tabs List Styles */
 
-
+body > header nav.tabs {
+   background: url('sf_back1.png') no-repeat center center;
+   background-size: cover;
+}
 
 
 /* Left Section Styles */
