--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -50,7 +50,12 @@ section#left nav.vertical h1 {
 
 /* Center Article Styles */
 
-
+section#center article {
+   background: radial-gradient(circle, white 30%, rgb(151, 151, 151));
+   border: 1px solid rgb(151, 151, 151);
+   border-radius: 50px;
+   box-shadow: 10px 10px 20px rgb(51, 51, 51);
+}
 
 
 /* Blockquote Styles */
