--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -60,4 +60,8 @@ section#center article {
 
 /* Blockquote Styles */
 
-
+blockquote {
+   background: url('sf_speech.png') no-repeat;
+   background-size: 100% 100%;
+   filter: drop-shadow(5px 5px 10px rgb(51, 51, 51));
+}
