--- a/assn08/case2/sf_effects.css
+++ b/assn08/case2/sf_effects.css
@@ -65,3 +65,7 @@ blockquote {
    background-size: 100% 100%;
    filter: drop-shadow(5px 5px 10px rgb(51, 51, 51));
 }
+
+cite img {
+   border-radius: 50%;
+}
