--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -150,4 +150,24 @@ body > footer {
 
 /* New Styles Added Below */
 
+/* ===============================
+   Mobile Styles: opx to 480px
+   ================================
+*/
+@media only screen and (max-width: 480px){
 
+}
+/* =================================
+   Tablet Styles: 481px and greater
+   =================================
+*/
+@media only screen and (min-width: 481px) {
+
+}
+/* ====================================
+   Desktop Styles: 769px and greater
+   ==================================
+   */
+   @media only screen and (min-width: 769px) {
+      
+   }
