--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -175,6 +175,10 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
    =================================
 */
 @media only screen and (min-width: 481px) {
+   ul.mainmenu > li {
+      float: left;
+      width: 20%;
+   }
 
 }
 /* ====================================
