--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -180,6 +180,9 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
       width: 20%;
    }
 
+   ul.submenu {
+      width: 200%;
+   }
 }
 /* ====================================
    Desktop Styles: 769px and greater
