--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -177,6 +177,7 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
 @media only screen and (min-width: 481px) {
    ul.mainmenu > li {
       float: left;
+      position: relative;
       width: 20%;
    }
 
