--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -192,5 +192,13 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
    ==================================
    */
    @media only screen and (min-width: 769px) {
+
+      ul.submenu {
+         background: transparent;
+         box-shadow: none;
+         display: block;
+         position: relative;
+         width: 100%;
+      }
       
    }
