--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -201,4 +201,9 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
          width: 100%;
       }
       
+      nav.horizontal::after {
+         clear:both;
+         content:"";
+         display: table;
+      }
    }
