--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -206,4 +206,8 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
          content:"";
          display: table;
       }
+
+      nav.horizontal a.submenutitle {
+         display: none;
+      }
    }
