--- a/assn09/tutorial/tf_styles1.css
+++ b/assn09/tutorial/tf_styles1.css
@@ -210,4 +210,14 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
       nav.horizontal a.submenutitle {
          display: none;
       }
+
+      article {
+         float: left;
+         margin-right: 5%;
+         width: 55%;
+      }
+      aside {
+         float: left;
+         width: 40%;
+      }
    }
