--- a/assn09/tutorial/tf_flex.css
+++ b/assn09/tutorial/tf_flex.css
@@ -5,8 +5,8 @@
    Tutorial 5
    Tutorial Case
    
-   Author:   
-   Date:     
+   Author:   Zulisa Rodriguez
+   Date:     11/29/2024
    
    Filename: tf_flex.css
    
