--- a/assn09/tutorial/tf_navicon.css
+++ b/assn09/tutorial/tf_navicon.css
@@ -41,4 +41,8 @@ a#navicon {
    nav.horizontal ul {
       display: none;
    }
+
+   a#nvaicon:hover+ul, nav.horizontal ul:hover {
+      display: block;
+   }
 }
