--- a/assn09/tutorial/tf_print.css
+++ b/assn09/tutorial/tf_print.css
@@ -4,8 +4,8 @@
    Tutorial 5
    Tutorial Case
    
-   Author:   
-   Date:     
+   Author:   Zulisa Rodriguez
+   Date:     11/29/2024
    
    Filename: tf_print.css
 
