--- a/assn09/tutorial/tf_print.css
+++ b/assn09/tutorial/tf_print.css
@@ -24,7 +24,10 @@ nav.hoorizontal, aside, footer {
 
 /* Page Box Styles */
 
-
+@page {
+   size: 8.5in 11in;
+   margin: 0.5in;
+}
 
 /* Header Styles */
 
