--- a/assn09/tutorial/tf_print.css
+++ b/assn09/tutorial/tf_print.css
@@ -78,7 +78,16 @@ article img {
 
 /* Hypertext Styles */
 
+a {
+   color: black;
+   text-decoration: none;
+}
 
+a::after {
+   content: "("attr(href) ") ";
+   font-weight: bold;
+   word-wrap: break-word;
+}
 
 
 
