--- a/assn09/case1/gp_print.css
+++ b/assn09/case1/gp_print.css
@@ -4,8 +4,9 @@
    Tutorial 5
    Case Problem 1
    
-   Author:   
-   Date:     
+   Author:   Zulisa Rodriguez
+   Date:     11/29/2024
+
    
    Filename: gp_print.css
 
