--- a/assn09/case1/gp_layout.css
+++ b/assn09/case1/gp_layout.css
@@ -5,8 +5,8 @@
    Tutorial 5
    Case Problem 1
    
-   Author:   
-   Date:     
+   Author:   Zulisa Rodriguez
+   Date:     11/29/2024
    
    Filename: gp_layout.css
 
