--- a/assn09/case1/gp_layout.css
+++ b/assn09/case1/gp_layout.css
@@ -90,3 +90,21 @@ body > footer {
    ===================================================
 */
 
+@media screen and (min-width: 481px) {
+   body {
+       flex-direction: row;
+   }
+
+   section#sheet {
+       flex-basis: 60%;
+   }
+
+   article {
+       flex-basis: 40%;
+   }
+
+   nav.horizontal {
+       flex-direction: row;
+       justify-content: center;
+   }
+}
