--- a/assn09/case1/gp_layout.css
+++ b/assn09/case1/gp_layout.css
@@ -107,4 +107,11 @@ body > footer {
        flex-direction: row;
        justify-content: center;
    }
+
+   nav.horizontal ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      height: 40px;
+  }
 }
