--- a/assn09/case1/gp_layout.css
+++ b/assn09/case1/gp_layout.css
@@ -115,10 +115,24 @@ body > footer {
       height: 40px;
   }
 
-  nav.horizontal ul {
-   display: flex;
-   flex-direction: row;
-   flex-wrap: nowrap;
-   height: 40px;
+  nav.horizontal ul li {
+   flex-grow: 1;
+   flex-shrink: 1;
+   flex-basis: auto;
 }
+
+img.size1 {
+   width: 100%;
+}
+
+img.size2 {
+   width: 60%;
+}
+
+img.size3 {
+   width: 40%;
+}
+
+img.size4 {
+   width: 30%;
 }
