--- a/assn09/tutorial copy/dlr_tables.css
+++ b/assn09/tutorial copy/dlr_tables.css
@@ -6,8 +6,8 @@
    Tutorial Case
 
    Tables Style Sheet
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/30/2024
 
    Filename:         dlr_tables.css
 
