--- a/assn09/tutorial copy/dlr_tables.css
+++ b/assn09/tutorial copy/dlr_tables.css
@@ -24,7 +24,9 @@ table.schedule {
 
 /* Table Cell Styles */
 
-
+table.schedule th, table.schedule td {
+   border: 1px solid gray;
+}
 
 /* Table Caption Styles */
 
