--- a/assn09/tutorial copy/dlr_tables.css
+++ b/assn09/tutorial copy/dlr_tables.css
@@ -39,6 +39,11 @@ table.schedule caption {
 /* Row Group Styles */
 
 table.schedule t foot {
+   background: rgb(153, 0, 153);
+   color: white;
+}
+
+table.schedule tfoot {
    background: black;
    color: white;
 }
