--- a/assn09/tutorial copy/dlr_tables.css
+++ b/assn09/tutorial copy/dlr_tables.css
@@ -38,7 +38,7 @@ table.schedule caption {
 
 /* Row Group Styles */
 
-table.schedule t foot {
+table.schedule thead {
    background: rgb(153, 0, 153);
    color: white;
 }
@@ -46,6 +46,10 @@ table.schedule t foot {
 table.schedule tfoot {
    background: black;
    color: white;
+
+   table.schedule thead tr {
+      height: 30px;
+   }
 }
 
 /* Column Group Styles */
