--- a/assn09/tutorial copy/dlr_columns.css
+++ b/assn09/tutorial copy/dlr_columns.css
@@ -6,8 +6,8 @@
    Tutorial Case
 
    Columns Style Sheet
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/30/2024
 
    Filename:         dlr_columns.css
 
