--- a/assn09/tutorial copy/dlr_columns.css
+++ b/assn09/tutorial copy/dlr_columns.css
@@ -22,5 +22,8 @@
       column-count: 2;
       column-gap: 30px;
       column-rule: 2px solid gray;
+      
+      widows: 3;
+      orphans: 3;
    }
 }
