--- a/assn10/case1/mi_tables.css
+++ b/assn10/case1/mi_tables.css
@@ -15,6 +15,11 @@
 
 /* Table Styles */
 
+table {
+   background: linear-gradient(to bottom, rgb(190, 215, 255), black);
+   border: 5px solid gray;
+ }
+ 
 
 
 /* Column Styles */
