--- a/assn10/case1/mi_tables.css
+++ b/assn10/case1/mi_tables.css
@@ -19,6 +19,13 @@ table {
    background: linear-gradient(to bottom, rgb(190, 215, 255), black);
    border: 5px solid gray;
  }
+
+ th, td {
+   border: 3px solid gray;
+   line-height: 1.4em;
+   padding: 8px;
+ }
+ 
  
 
 
