--- a/assn10/case1/mi_tables.css
+++ b/assn10/case1/mi_tables.css
@@ -35,7 +35,12 @@ table {
 
 /* Table Header Styles */
 
-
+th {
+   background-color: black;
+   color: rgb(130, 210, 255);
+   font-weight: normal;
+ }
+ 
 
 
 
