--- a/assn10/tutorial/rb_forms.css
+++ b/assn10/tutorial/rb_forms.css
@@ -4,8 +4,8 @@
    Tutorial Case
 
    Survey Forms Style Sheet
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   12/08/2024
 
    Filename:         rb_forms.css
 
