--- a/assn10/tutorial/rb_forms.css
+++ b/assn10/tutorial/rb_forms.css
@@ -38,7 +38,11 @@ div.formRow > * {
 }
 /* Legend Styles */
 
-
+legend {
+   background-color: rgb(179, 20, 25);
+   color: white;
+   padding: 5px;
+}
 
 /* Text Area Styles */
 
