--- a/assn10/tutorial/rb_forms.css
+++ b/assn10/tutorial/rb_forms.css
@@ -46,7 +46,11 @@ legend {
 
 /* Text Area Styles */
 
-
+textarea {
+   margin-top: 10px;
+   height: 100px;
+   width: 95%;
+}
 
 /* Spinner Styles */
 
