--- a/assn10/tutorial/rb_forms.css
+++ b/assn10/tutorial/rb_forms.css
@@ -65,5 +65,11 @@ div#buttons {
    width: 100%;
 }
 
+input [type='submit'], input[type='reset'] {
+   font-size: 1.2em;
+   padding: 5px;
+   margin: 15px;
+}
+
 /* Validation Styles */
 
