--- a/assn10/tutorial/rb_forms.css
+++ b/assn10/tutorial/rb_forms.css
@@ -73,3 +73,6 @@ input [type='submit'], input[type='reset'] {
 
 /* Validation Styles */
 
+input:focus, select:focus, textarea:focus {
+   background-color: rgb(220, 255, 220);
+}
