--- a/assn10/tutorial/rb_forms.css
+++ b/assn10/tutorial/rb_forms.css
@@ -83,3 +83,10 @@ input#phone:focus:valid,
 input#mail:focus:valid {
    background: rgb(220, 255, 220) url(rb_valid.png) bottom right/contain no-repeat;
 }
+
+input#name:focus:invalid,
+input#zip:focus:invalid,
+input#phone:focus:invalid,
+input#mail:focus:invalid {
+   background: rgb(255, 232, 233) url(rb_invalid.png) bottom right/contain no-repeat;
+}
